@@ -39,6 +39,12 @@ namespace InstallerTest1
         {
             base.Init(parent);
 
+            var bamVersion = Bam.Core.Graph.Instance.ProcessState.Version;
+            this.Macros["MajorVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Major.ToString());
+            this.Macros["MinorVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Minor.ToString());
+            this.Macros["PatchVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Build.ToString());
+            this.Macros["Description"] = Bam.Core.TokenizedString.CreateVerbatim("InstallerTest1: Example C dynamic library");
+
             this.CreateHeaderContainer("$(packagedir)/source/dynamiclib/*.h");
             this.CreateCSourceContainer("$(packagedir)/source/dynamiclib/*.cpp");
 
@@ -67,6 +73,12 @@ namespace InstallerTest1
             Module parent)
         {
             base.Init(parent);
+
+            var bamVersion = Bam.Core.Graph.Instance.ProcessState.Version;
+            this.Macros["MajorVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Major.ToString());
+            this.Macros["MinorVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Minor.ToString());
+            this.Macros["PatchVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Build.ToString());
+            this.Macros["Description"] = Bam.Core.TokenizedString.CreateVerbatim("InstallerTest1: Example C++ dynamic library");
 
             this.CreateHeaderContainer("$(packagedir)/source/dynamiclib/*.h");
             this.CreateCxxSourceContainer("$(packagedir)/source/dynamiclib/*.cpp");
