@@ -62,6 +62,12 @@ namespace Test15
         {
             base.Init(parent);
 
+            var bamVersion = Bam.Core.Graph.Instance.ProcessState.Version;
+            this.Macros["MajorVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Major.ToString());
+            this.Macros["MinorVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Minor.ToString());
+            this.Macros["PatchVersion"] = Bam.Core.TokenizedString.CreateVerbatim(bamVersion.Build.ToString());
+            this.Macros["Description"] = Bam.Core.TokenizedString.CreateVerbatim("Test15: Example dynamic library");
+
             this.CreateHeaderContainer("$(packagedir)/include/dynamiclibrary2.h");
             var source = this.CreateCSourceContainer("$(packagedir)/source/dynamiclibrary2.c");
             this.PublicPatch((settings, appliedTo) =>
